compiler-core/src/parse/snapshots/gleam_core__parse__tests__error_message_when_using_discard_pattern_for_constant_name.snap
---
source: compiler-core/src/parse/tests.rs
expression: const _wibble = 1
---
----- SOURCE CODE
const _wibble = 1

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:7
  │
1 │ const _wibble = 1
  │       ^^^^^^^ I'm expecting a lowercase name here

A constant name must start with a lowercase letter, and can contain a-z,
0-9, or _.
